# home-ledger

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: calc.py  db.py  main.py  models.py  routes.py  seed.py
backend/app/tests/: conftest.py  test_bulk.py  test_calc.py  test_schema.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  api.ts  format.ts  main.ts  router.ts
frontend/src/components/: BudgetVsActual.vue  CategoryBar.vue  CategoryPie.vue  Logo.vue  QuickAdd.vue  SavingsRateLine.vue  TxnCard.vue  TxnList.vue
frontend/src/composables/: useCategories.ts  useDataVersion.ts  useSummary.ts  useTransactions.ts
frontend/src/i18n/: en.json  index.ts  zh-CN.json
frontend/src/style/: base.css
frontend/src/views/: DailyView.vue  DashboardView.vue  ReportView.vue  ReportsView.vue  SettingsView.vue
