[project]
name = "home-ledger"
version = "0.1.0"
description = "Personal expense and budgeting tool"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "sqlmodel>=0.0.22",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.7",
    "httpx2>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["app/tests"]
